# synth-hpv-dataset-using-mech-interp

./: .gitignore  CLAUDE.md  README.md  generate.py  pyproject.toml  utils.py
data/: seed_qa.json
sae_steering/: LITERATURE_REVIEW.md  README.md  config.py  domains.py  factuality.py  features.py  model.py  requirements.txt  run_experiment.py  steering.py
